--- a/.github/workflows/auto-release-notes.yml
+++ b/.github/workflows/auto-release-notes.yml
@@ -3,7 +3,11 @@ name: Autonomous Release Notes
 on:
   pull_request:
     types: [closed]
-    branches: ['main', 'release/*', 'hotfix/*']
+    branches:
+      - main
+      - release/*
+      - hotfix/*
+      - feature/*
 
 jobs:
   autonomously_generate_notes:
@@ -11,12 +15,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # ------------------------------------------------------------
+    # Step 1: Build the AI prompt from PR context
+    # ------------------------------------------------------------
     - name: Gather Release Data and Build Prompt
       id: prep
       run: |
         cat <<EOF > prompt.txt
-        I need you to generate business-friendly release notes for our Salesforce system deployment based on this Pull Request:
-        --
+        I need you to generate business-friendly release notes for our Salesforce system deployment based on this Pull Request.
+
         Repository: ${{ github.repository }}
         PR Title: ${{ github.event.pull_request.title }}
         PR URL: ${{ github.event.pull_request.html_url }}
@@ -25,19 +32,26 @@ jobs:
         PR Merger: ${{ github.event.pull_request.merged_by.login }}
         Files Changed: ${{ github.event.pull_request.changed_files }}
         Commit Count: ${{ github.event.pull_request.commits }}
-        Body:
+
+        Pull Request Description:
         ${{ github.event.pull_request.body }}
 
-        Please summarize the business value, key highlights, resolved issues, and overall impact in a way suitable for IT Directors and Business Analysts.
-        Format the response in Markdown with:
+        Please write release notes suitable for IT Directors and Business Analysts.
+
+        Use Markdown formatting with the following sections ONLY:
         - Executive Summary
-        - Key Highlights (including resolved issues, enhancements, UI/business impact, compliance/security if any)
+        - Key Highlights
         - Next Steps and Recommendations
         - Additional Notes
 
-        The tone should be professional and business-oriented.
+        Do NOT list contributors or commits.
+        Do NOT reference who prepared the notes.
+        Focus on business value, impact, risk reduction, and operational relevance.
         EOF
 
+    # ------------------------------------------------------------
+    # Step 2: Call OpenAI to generate the release notes
+    # ------------------------------------------------------------
     - name: Query OpenAI for Release Notes
       id: ai
       env:
@@ -50,15 +64,94 @@ jobs:
             --arg prompt "$(cat prompt.txt)" \
             '{
               "model": "gpt-4",
-              "messages": [{"role": "system", "content": "You are a business release notes generator."}, {"role": "user", "content": $prompt}],
+              "messages": [
+                { "role": "system", "content": "You are a business-focused release notes generator." },
+                { "role": "user", "content": $prompt }
+              ],
               "temperature": 0.4
-             }')")
-        RELEASE_NOTES=$(echo "$RESPONSE" | jq -r .choices[0].message.content)
-        echo "$RELEASE_NOTES" > release-notes.md
+            }')")
+
+        RELEASE_NOTES=$(echo "$RESPONSE" | jq -r '.choices[0].message.content')
+
         echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
         echo "$RELEASE_NOTES" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
 
+    # ------------------------------------------------------------
+    # Step 3: Determine the release tag (branch-driven)
+    # ------------------------------------------------------------
+    - name: Determine Release Tag
+      id: tag
+      run: |
+        SOURCE_BRANCH="${{ github.event.pull_request.head.ref }}"
+
+        # Allowed patterns (current reality):
+        # - release or release/<date>
+        # - hotfix/{company}-{case}
+        # - feature/{company}-{case}
+
+        TAG_NAME="$SOURCE_BRANCH"
+
+        echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
+        echo "Using release tag: $TAG_NAME"
+
+    # ------------------------------------------------------------
+    # Step 4: Create or Update GitHub Release
+    # ------------------------------------------------------------
+    - name: Create or Update GitHub Release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        RELEASE_BODY=$(cat <<EOF
+## Executive Summary
+${{ env.RELEASE_NOTES }}
+
+---
+EOF
+)
+
+        # Check if a release already exists for this tag
+        EXISTING_RELEASE=$(curl -s \
+          -H "Authorization: Bearer $GITHUB_TOKEN" \
+          -H "Accept: application/vnd.github+json" \
+          https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ env.TAG_NAME }})
+
+        RELEASE_ID=$(echo "$EXISTING_RELEASE" | jq -r '.id // empty')
+
+        if [ -z "$RELEASE_ID" ]; then
+          echo "Creating new draft release for tag $TAG_NAME"
+
+          curl -s -X POST \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/${{ github.repository }}/releases \
+            -d "$(jq -n \
+              --arg tag "$TAG_NAME" \
+              --arg name "${{ github.event.pull_request.title }}" \
+              --arg body "$RELEASE_BODY" \
+              '{
+                tag_name: $tag,
+                name: $name,
+                body: $body,
+                draft: true
+              }')"
+        else
+          echo "Updating existing release ID $RELEASE_ID"
+
+          curl -s -X PATCH \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/${{ github.repository }}/releases/$RELEASE_ID \
+            -d "$(jq -n \
+              --arg body "$RELEASE_BODY" \
+              '{
+                body: $body
+              }')"
+        fi
+
+    # ------------------------------------------------------------
+    # Step 5: Post notes back to the PR (audit trail)
+    # ------------------------------------------------------------
     - name: Post Release Notes as PR Comment
       uses: peter-evans/create-or-update-comment@v4
       with:
@@ -69,3 +162,4 @@ jobs:
           ${{ env.RELEASE_NOTES }}
 
           _These notes were generated automatically. Please review for completeness and accuracy._
+
